--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robiul Islam</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
 </head>
 <body>
     <section>
@@ -76,8 +77,12 @@
                 world. Be a positive influence in someone’s life.</p>
         </div>
     </section>
+    <section>
+        <h3 id="videoText">Repent to the Creator, the way to rebuild yourself.</h3>
+        <video id="video" controls src="video1.mp4"></video>
+    </section>
     <footer>
-        <p>@ Robiul Islam. United International University</p>
+        <p>© Robiul Islam. United International University</p>
     </footer>
 
 </body>
